modified dolphin header placement, fixed issue incorrectly placed responsive tag in NewsItem, made overflow hidden on Main container

--- a/client/src/styles/components/Header.css
+++ b/client/src/styles/components/Header.css
@@ -1,3 +1,7 @@
 .header {
+  padding: 5rem 0;
+}
+
+.no-padding {
   padding: 0;
 }
