--- a/client/src/styles/containers/Main.css
+++ b/client/src/styles/containers/Main.css
@@ -1,4 +1,5 @@
 .main {
   text-align: center;
   background-color: #428ebd;
+  overflow: hidden;
 }
